[gd_scene load_steps=17 format=3 uid="uid://dphb3n2u8gxk8"]

[ext_resource type="Script" uid="uid://hcldmt5777ki" path="res://Scripts/gui.gd" id="1_b1cy7"]
[ext_resource type="Texture2D" uid="uid://dgk0k18d8wob6" path="res://Assets/Art/UI assets/Symptom UI.png" id="2_atngs"]
[ext_resource type="Texture2D" uid="uid://chhgtio7yl5bt" path="res://Assets/Art/Infection Assets/Room.png" id="3_s0i4c"]
[ext_resource type="Texture2D" uid="uid://b0b4f70prba5m" path="res://Assets/Art/Infection Assets/Computer.png" id="4_5arer"]
[ext_resource type="Texture2D" uid="uid://c3bov2oa6svte" path="res://Assets/Art/Infection Assets/IV Drip.png" id="4_knnk2"]
[ext_resource type="Texture2D" uid="uid://bnvnocbgru5ei" path="res://Assets/Art/Infection Assets/Table.png" id="5_qalk2"]
[ext_resource type="Texture2D" uid="uid://dhqx0pvlcgu1c" path="res://Assets/Art/Infection Assets/Table Assets.png" id="6_u1lui"]
[ext_resource type="Texture2D" uid="uid://mxkn1kamxyod" path="res://Assets/Art/Infection Assets/Screen Left.png" id="7_ae3yb"]
[ext_resource type="Texture2D" uid="uid://dvq46nacwq65r" path="res://Assets/Art/Infection Assets/Screen Right.png" id="8_qalk2"]
[ext_resource type="Script" uid="uid://e3igboxx5e4w" path="res://Scenes/UI-UX/clickable_areas.gd" id="9_1riyv"]
[ext_resource type="Texture2D" uid="uid://ucmmc1rxcfjo" path="res://Assets/Art/Infection Assets/Symptom File.png" id="10_u1lui"]
[ext_resource type="Texture2D" uid="uid://dw6x0tvff1ift" path="res://Assets/Art/UI assets/Healthy UI.png" id="11_lisox"]
[ext_resource type="Texture2D" uid="uid://bp2cokb0o622o" path="res://Assets/Art/UI assets/Quarantine UI.png" id="12_1riyv"]
[ext_resource type="PackedScene" uid="uid://crrwxrg5xpx1x" path="res://Scenes/Misc/side_boundary.tscn" id="14_1riyv"]
[ext_resource type="PackedScene" uid="uid://c4j2sdk605171" path="res://Scenes/UI-UX/top_bottom_boundary.tscn" id="14_lisox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atngs"]
size = Vector2(976, 712)

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_b1cy7")
metadata/_edit_use_anchors_ = true

[node name="Folder Pop Up" type="TextureRect" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_atngs")
expand_mode = 5
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Folder Pop Up"]
position = Vector2(584, 318)
scale = Vector2(0.599999, 0.52)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Folder Pop Up/Area2D"]
position = Vector2(0, -56)
shape = SubResource("RectangleShape2D_atngs")

[node name="Background2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Room" type="TextureRect" parent="Background2"]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_s0i4c")
expand_mode = 3

[node name="Screen Left" type="TextureRect" parent="Background2"]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_ae3yb")
expand_mode = 3

[node name="Screen Right" type="TextureRect" parent="Background2"]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_qalk2")
expand_mode = 3

[node name="IV Drip" type="TextureRect" parent="Background2"]
z_index = -90
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_knnk2")
expand_mode = 3

[node name="Table" type="TextureRect" parent="Background2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_qalk2")
expand_mode = 3

[node name="TableAssets" type="TextureRect" parent="Background2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_u1lui")
expand_mode = 3

[node name="Clickable Areas" type="Control" parent="."]
z_as_relative = false
layout_mode = 2
anchors_preset = 0
offset_right = 1152.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_1riyv")

[node name="Computer" type="TextureButton" parent="Clickable Areas"]
z_as_relative = false
layout_mode = 0
offset_left = 1360.0
offset_top = -184.0
offset_right = 1916.0
offset_bottom = 359.0
scale = Vector2(0.7, 0.7)
mouse_filter = 1
texture_normal = ExtResource("4_5arer")
stretch_mode = 0

[node name="Symptoms File" type="TextureButton" parent="Clickable Areas"]
z_as_relative = false
layout_mode = 0
offset_left = 568.0
offset_top = 120.0
offset_right = 997.0
offset_bottom = 412.0
scale = Vector2(0.6, 0.6)
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource("10_u1lui")
stretch_mode = 0

[node name="Healthy UI" type="TextureButton" parent="Clickable Areas"]
z_as_relative = false
layout_mode = 0
offset_left = 544.0
offset_top = -504.0
offset_right = 710.0
offset_bottom = -168.0
scale = Vector2(0.8, 0.8)
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource("11_lisox")
stretch_mode = 0

[node name="Quarantine UI" type="TextureButton" parent="Clickable Areas"]
z_as_relative = false
layout_mode = 0
offset_left = 1128.0
offset_top = -520.0
offset_right = 1294.0
offset_bottom = -184.0
scale = Vector2(0.8, 0.8)
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource("12_1riyv")
stretch_mode = 0

[node name="Thermometer" type="TextureButton" parent="Clickable Areas"]
visible = false
z_as_relative = false
layout_mode = 0
offset_top = -648.0
offset_right = 1920.0
offset_bottom = 432.0
toggle_mode = true

[node name="Stethoscope" type="TextureButton" parent="Clickable Areas"]
visible = false
z_as_relative = false
layout_mode = 0
offset_top = -648.0
offset_right = 1920.0
offset_bottom = 432.0
toggle_mode = true

[node name="Syringe" type="TextureButton" parent="Clickable Areas"]
visible = false
z_as_relative = false
layout_mode = 0
offset_top = -648.0
offset_right = 1920.0
offset_bottom = 432.0
toggle_mode = true

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Top_bottom Boundary" parent="Control" instance=ExtResource("14_lisox")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = 115.0
offset_right = -290.0
offset_bottom = 115.0
grow_vertical = 0
scale = Vector2(1.30966, 6.24908)

[node name="Top_bottom Boundary2" parent="Control" instance=ExtResource("14_lisox")]
layout_mode = 1
offset_left = -253.0
offset_top = -101.0
offset_right = -253.0
offset_bottom = -101.0
scale = Vector2(1.28, 5.12)

[node name="side_boundary2" parent="Control" instance=ExtResource("14_1riyv")]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
offset_left = 147.0
offset_top = 9.0
offset_right = 147.0
offset_bottom = 9.0
grow_horizontal = 0
scale = Vector2(7.85222, 1)

[node name="side_boundary" parent="Control" instance=ExtResource("14_1riyv")]
layout_mode = 1
anchors_preset = 9
anchor_right = 0.0
offset_left = -125.0
offset_right = -125.0
grow_horizontal = 1
scale = Vector2(6.28, 1)

[connection signal="pressed" from="Clickable Areas/Computer" to="." method="_on_computer_pressed"]
[connection signal="toggled" from="Clickable Areas/Symptoms File" to="." method="_on_symptoms_folder_toggled"]
[connection signal="pressed" from="Clickable Areas/Healthy UI" to="." method="_on_healthy_ui_pressed"]
[connection signal="pressed" from="Clickable Areas/Quarantine UI" to="." method="_on_quarantine_ui_pressed"]
[connection signal="pressed" from="Clickable Areas/Thermometer" to="." method="_on_thermometer_pressed"]
[connection signal="pressed" from="Clickable Areas/Stethoscope" to="." method="_on_stethoscope_pressed"]
[connection signal="pressed" from="Clickable Areas/Syringe" to="." method="_on_syringe_pressed"]
